# Direct-RPC

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  benchmark.cpp  simple_client.cpp  simple_server.cpp
include/drpc/: buffer.h  common.h  connection.h  dispatcher.h  profiling.h  protocol.h  rpc.h  transport.h
src/buffer/: memory_pool.cpp  memory_region.cpp
src/connection/: cm_manager.cpp  connection.cpp
src/dispatcher/: dispatcher.cpp  request_context.cpp
src/profiling/: profiler.cpp
src/protocol/: codec.cpp  message.cpp
src/rpc/: client.cpp  rpc.cpp  server.cpp
src/transport/: connection.cpp  context.cpp  cq.cpp  pd.cpp  qp.cpp  transport.cpp  wr_builder.cpp
tests/: CMakeLists.txt  integration_test.cpp  rpc_test.cpp  unit_test.cpp
tests/integration/: connection_test.cpp  rpc_test.cpp  transport_test.cpp
tests/unit/: test_codec.cpp  test_main.cpp  test_memory_pool.cpp  test_wr_builder.cpp
